# OOP

Laba4/: CMakeLists.txt  addmemberdialog.cpp  addmemberdialog.h  addmemberdialog.ui  contentwidget.cpp  contentwidget.h  editingdialog.cpp  editingdialog.h  editingdialog.ui  group.cpp  group.h  human.cpp  human.h  main.cpp  mywidget3.cpp  mywidget3.h  pch.h  smirnovmain.cpp  smirnovmain.h  smirnovmain.ui  student.h
laba2/: Group.cpp  Group.h  Human.h  Student.h  main.cpp  task  temp.txt  temp2.txt  test_file_2  test_file_3
